--- a/Pandas/11_Barra_prograsso.ipynb
+++ b/Pandas/11_Barra_prograsso.ipynb
@@ -1,38 +1,67 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "                Comparando, Tratando e Mesclando DataFrames \n",
+    "\"\"\"\n",
+    "            Caso os arquivos a serem análisados sejam muito grande, o sistema demorará para funcionar, dependendo do caso\n",
+    "        pode trazer a insegurança no programador sobre, será que o código não travou? Quanto tempo ele ainda vai demorar\n",
+    "        para me retornar os dados solicitados?\n",
     "\n",
-    "        Vamos modificar as Id's para os nomes dos produtos, dois clientes e das lojas,\n",
-    "    para nossas análises ficarem mais intuitivas futuramente. Para isso, vamos criar um\n",
-    "    data frame com todos os detalhes.\n",
+    "            Podemos criar uma barra de progresso para visualizarmos em tela o desempenho e andamento do programa durante\n",
+    "        sua execução, para isso, utilizaremos a biblioteca tqdm\n",
     "\n",
-    "        * Usaremos o método merge para isso e, depois se quisermos, podemos pegar apenas\n",
-    "    as colunas que queremos do data frame final.\n",
-    "\n",
-    "        Dependendo dos valores que existam dentro do arquivo csv, pode ser que o Python não seja capaz de ler por causa do tipo de \n",
-    "    caracteres especiais contidos neles, por exemplo, como o Python usa a lingua inglesa, não existe nela certos caracteres como\n",
-    "    '~', '´', esses tipo de caracteres especiais, logo, o pandas retornará um erro caso seja encontrado este tipo de caracter nas\n",
-    "    strings contidas nas tabelas, para resolvermos este problema devemos pasar como argumento o parâmetro de encoding, para assim,\n",
-    "    'configurar' o panas a ler os tipos de caracteres especiais da lingua portuguesa\n",
-    "\n",
-    "            * encoding='Latin1'\n",
-    "            * encoding='ISO-8859-1'\n",
-    "            * encoding='utf-8'\n",
-    "            * encoding='cp1252'\n",
-    "\n",
-    "\n",
-    "        O encoding que o professor sugere usar como seu favordito é o 'ISO-8859-1'\n"
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Lendo os arquivos CSV da empresa\n",
+    "vendas_df = pd.read_csv(r'Contoso - Vendas - 2017.csv', sep=';')\n",
+    "produtos_df = pd.read_csv(r'Contoso - Cadastro Produtos.csv', sep=';', encoding='ISO8859-1')\n",
+    "lojas_df = pd.read_csv(r'D:Contoso - Lojas.csv', sep=';', encoding='ISO8859-1')\n",
+    "cliente_df = pd.read_csv(r'Contoso - Clientes.csv', sep=';', encoding='ISO8859-1')\n",
+    "\n",
+    "# Renomeando colunas para padronizar as tabelas\n",
+    "produtos_df = produtos_df.rename(columns={'ÿNome do Produto': 'Nome Produto'})\n",
+    "lojas_df = lojas_df.rename(columns={'ÿID Loja': 'ID Loja'})\n",
+    "cliente_df = cliente_df.rename(columns={'ÿID Cliente': \"ID Cliente\"})\n",
+    "cliente_df = cliente_df.rename(columns={'E-mail': 'E-mail do Cliente'})\n",
+    "\n",
+    "\n",
+    "# Filtrando colunas necessárias a tabela\n",
+    "cliente_df = cliente_df[['ID Cliente', 'E-mail do Cliente']]\n",
+    "produtos_df = produtos_df[['ID Produto', 'Nome Produto']]\n",
+    "lojas_df = lojas_df[['ID Loja', 'Nome da Loja']]\n",
+    "\n",
+    "# Associando as tabelas pela ID\n",
+    "vendas_df = vendas_df.merge(produtos_df, on='ID Produto')\n",
+    "vendas_df = vendas_df.merge(lojas_df, on='ID Loja')\n",
+    "vendas_df = vendas_df.merge(cliente_df, on='ID Cliente')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 980642/980642 [00:09<00:00, 101666.11it/s] \n",
+      " 90%|█████████ | 885547/980642 [00:00<00:00, 1211678.68it/s]"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -64,9 +93,9 @@
        "      <th>ID Cliente</th>\n",
        "      <th>Quantidade Vendida</th>\n",
        "      <th>Quantidade Devolvida</th>\n",
-       "      <th>Nome do Produto</th>\n",
+       "      <th>Nome Produto</th>\n",
        "      <th>Nome da Loja</th>\n",
-       "      <th>Email do Cliente</th>\n",
+       "      <th>E-mail do Cliente</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -241,7 +270,7 @@
        "      <td>10</td>\n",
        "      <td>815</td>\n",
        "      <td>8</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>The Phone Company Touch Screen Phones SAW/On-w...</td>\n",
        "      <td>Loja Contoso Roma</td>\n",
        "      <td>ekorneevmm@instagram.com</td>\n",
@@ -289,9 +318,9 @@
        "980638                     0   \n",
        "980639                     0   \n",
        "980640                     0   \n",
-       "980641                     0   \n",
+       "980641                     1   \n",
        "\n",
-       "                                          Nome do Produto  \\\n",
+       "                                             Nome Produto  \\\n",
        "0              A. Datum Advanced Digital Camera M300 Pink   \n",
        "1       Litware Home Theater System 7.1 Channel M710 B...   \n",
        "2                   Adventure Works Laptop12 M1201 Silver   \n",
@@ -304,7 +333,7 @@
        "980640  Contoso Dual USB Power Adapter - power adapter...   \n",
        "980641  The Phone Company Touch Screen Phones SAW/On-w...   \n",
        "\n",
-       "                       Nome da Loja             Email do Cliente  \n",
+       "                       Nome da Loja            E-mail do Cliente  \n",
        "0              Loja Contoso Austin        rbrumfieldmy@ameblo.jp  \n",
        "1       Loja Contoso Europe Online        rbrumfieldmy@ameblo.jp  \n",
        "2            Loja Contoso Hartford        rbrumfieldmy@ameblo.jp  \n",
@@ -322,53 +351,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 980642/980642 [00:18<00:00, 1211678.68it/s]"
+     ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "# Imagine que a Loja Contoso Roma de ID 222, para tentar burlar o sistema de metas, diminuiu 1 da quantidade devolvida\n",
+    "# de todas as vendas que ela teve. Descobrimos isso, e agora precisamos corrigir nosso banco de dados\n",
     "\n",
-    "vendas_df = pd.read_csv(r'Contoso - Vendas - 2017.csv', sep=';', encoding='ISO-8859-1')\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "produtos_df = pd.read_csv(r'Contoso - Cadastro Produtos.csv', sep=';', encoding='ISO-8859-1')\n",
+    "# Gerando barra de progresso para acompanhar o andamento do programa\n",
+    "pbar = tqdm(total=len(vendas_df[\"ID Loja\"]), position=0, leave=True)\n",
     "\n",
-    "lojas_df = pd.read_csv(r'Contoso - Lojas.csv', sep=';', encoding='ISO-8859-1')\n",
+    "for indice, id_loja in enumerate(vendas_df['ID Loja']):\n",
+    "    if id_loja == 222:\n",
+    "        vendas_df.loc[indice, 'Quantidade Devolvida'] += 1\n",
+    "    \n",
+    "    pbar.update() # Barra de progresso será atualizada a cada iteração com o for.\n",
     "\n",
-    "clientes_df = pd.read_csv(r'Contoso - Clientes.csv', sep=';', encoding='ISO-8859-1')\n",
-    "\n",
-    "# Podemos selecionar colunas que nos sejam úteis para sere mostradas em nossa tabela, para isso, devemos usar o método .drop(),\n",
-    "# que no caso, colocará fora as colunas que nós passarmos em seu argumento, isso não afetará o arquivo original, caso seja \n",
-    "# necessário excluir mais de uma coluna, os nomes das mesmas deverão ser passados como uma lista de colunas. Após passar a lista \n",
-    "# de nomes das colunas, deve ser adicionado o eixo, sendo axis=0 para remover linhas e axis=1 para remover colunas, mesmas lógica \n",
-    "# do NumPy\n",
-    "\n",
-    "clientes_df = clientes_df.drop(\n",
-    "    ['Unnamed: 7', 'Unnamed: 8', 'Unnamed: 9', 'Unnamed: 10'], axis=1\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "# Renomear colunas das tabelas para corrigir nomes errados ou inadequados\n",
-    "\n",
-    "produtos_df = produtos_df.rename(columns={'ÿNome do Produto': 'Nome do Produto'})\n",
-    "lojas_df = lojas_df.rename(columns={'ÿID Loja': 'ID Loja'})\n",
-    "clientes_df = clientes_df.rename(columns={'ÿID Cliente': 'ID Cliente'})\n",
-    "\n",
-    "# No caso acima vemos como tirar colunas, mas e quisermos poucas colunas, não seria mais fácil selecionar as colunas na qual desejamos\n",
-    "# trabalhar, ao invés das que desejamso retirar? Podemos fazer isso com a passa uma lista de colunas como argumento a variavel\n",
-    "# de dataFrame\n",
-    "\n",
-    "clientes_df = clientes_df[['ID Cliente', 'E-mail']]\n",
-    "produtos_df = produtos_df[['ID Produto', 'Nome do Produto']]\n",
-    "lojas_df = lojas_df[['ID Loja', 'Nome da Loja']]\n",
-    "\n",
-    "# Juntar os DataFrames\n",
-    "\n",
-    "vendas_df = vendas_df.merge(produtos_df, on='ID Produto')\n",
-    "vendas_df = vendas_df.merge(lojas_df, on='ID Loja')\n",
-    "vendas_df = vendas_df.merge(clientes_df, on='ID Cliente')\n",
-    "\n",
-    "vendas_df = vendas_df.rename(columns={'E-mail': 'Email do Cliente'})\n",
-    "\n",
-    "display(vendas_df)"
+    "display(vendas_df)\n"
    ]
   }
  ],
